[tool.poetry]
name = "layer-3"
version = "0.1.0"
description = ""
authors = ["Matt Sárdi <sardi.matt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyautogui = "^0.9.54"
transformers = "^4.35.0"
pillow = "^10.1.0"
pyprojroot = "^0.3.0"
torch = "^2.1.0"
accelerate = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
